# libdispatch

./: CMakeLists.txt
config/: config.h.cmake.in
dispatch/: base.h  dispatch.h  io.h  object.h  queue.h  source.h  time.h
os/: object_private.h
private/: private.h
src/: CMakeLists.txt  apply.c  benchmark.c  init.c  internal.h  io.c  object.c  object_internal.h  queue.c  queue_internal.h  semaphore.c  semaphore_internal.h  shims.h  time.c
src/shims/: atomic.h  getprogname.h  hw_config.h  malloc_zone.h  perfmon.h  pthread_main_np.c  sleep.h  snprintf.h  strlcpy.h  time.h  tsd.h
testing/: dispatch_queue_finalizer.c  dispatch_vm.c
